# db-ui-component

./: .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  README_Databricks.md  TEST_SUMMARY.md  branch-protection.json  build_package.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  run_visualization_tests.py  setup.cfg  setup.py  simple_test.py
.claude/: settings.local.json
.github/workflows/: ci.yml  dev.yml  manual-release.yml
db_ui_components/: __init__.py  api_server.py  base_component.py  chart_component.py  config.py  dashboard.py  database_component.py  databricks_database.py  exceptions.py  filter_component.py  table_component.py  visualization_component.py
db_ui_components/visualization/: __init__.py  base_visualization.py  bubble_chart.py  config.py  data_transformer.py  heatmap.py  network_graph.py  sankey_chart.py  treemap.py
docs/: README.md
docs/api/: advanced_visualization.md  chart_component.md  dashboard.md  filter_component.md  table_component.md
docs/development/: branch_strategy.md  contributing.md  setup.md
docs/guides/: concepts.md  databricks_usage.md  deployment.md  installation.md  performance.md  security.md
docs/troubleshooting/: errors.md  faq.md
docs/tutorials/: advanced_visualization.md  basic_usage.md  customization.md  dashboard_creation.md  quickstart.md
examples/: api_server_example.py  basic_usage.py  database_example.py  databricks_notebook_example.py  databricks_usage.py  quick_start.py  visualization_examples.py
scripts/: release.py
tests/: conftest.py  test_base_component.py  test_base_visualization.py  test_chart_component_improved.py  test_components.py  test_config.py  test_config_final.py  test_config_improved.py  test_dashboard_improved.py  test_data_transformer_final.py  test_data_transformer_improved.py  test_database_component.py  test_edge_cases.py  test_exceptions.py  test_filter_component_improved.py  test_html_validation.py  test_integration.py  test_performance.py  test_table_component_improved.py  test_visualization_component.py  test_visualization_components.py  test_visualization_config.py  test_visualization_render_fix.py
